--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = orc
-url = https://gstreamer.freedesktop.org/src/orc/orc-0.4.31.tar.xz
+url = https://gstreamer.freedesktop.org/src/orc/orc-0.4.32.tar.xz
 archives = 
 giturl = 
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
@@ -57,5 +60,5 @@ use_clang = false
 # configure build for lto
 use_lto = true
 # require package verification for build
-verify_required = false
+verify_required = true
 
