--- a/options.conf
+++ b/options.conf
@@ -10,7 +10,7 @@ alias =
 # build 32 bit libraries
 32bit = true
 # allow package to build with test failures
-allow_test_failures = false
+allow_test_failures = true
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
@@ -47,12 +47,14 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
