--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = orc
 url = https://gstreamer.freedesktop.org/src/orc/orc-0.4.32.tar.xz
 archives = 
-giturl = 
+giturl = https://gitlab.freedesktop.org/gstreamer/orc
 domain = 
 alias = 
 
