--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = orc
-url = https://gstreamer.freedesktop.org/src/orc/orc-0.4.32.tar.xz
+url = https://gstreamer.freedesktop.org/src/orc/orc-0.4.33.tar.xz
 archives = 
 giturl = https://gitlab.freedesktop.org/gstreamer/orc
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
