orc: Autospec creation for update from version 0.4.34 to version 0.4.35
Jorge Zapata (7):
      Add and/or instructions for SSE and AVX
      Add orf/andf sys opcodes for SSE and AVX
      Use the correct prefix enum instead of a constant
      Update the documentation
      Add support for convwf, int16 to float
      orcc: Use the target option for code too
      docs: Improve the contributing guidelines as per reviews

L. E. Segovia (57):
      orc: Add SSE4.1 specialization for storeb
      orc: Allow clangd IntelliSense by breaking recursion loops
      orc: Allow usage of SSE4.1 pinsrb instead of movd
      orcprofile: Implement Windows high-resolution timestamp for MSVC
      ci: Update Android build
      orconce: Prefer the Win32 once implementation only for MSVC
      orconce: Add C11 atomics benchmark for reproducibility
      orc: Fix warning because of a mismatched OrcExecutor function signature
      orcfunctions: Regenerate files with the new ORC_RESTRICT fix
      sse: port dest register priming to Orc rules
      mmx: Regenerate backend
      exec_opcodes_sys: Improve logging and tally tests statuses
      orctest: Output a complete (and unconverted) picture of the variable state for accumulators
      orctest: Implement centralised OrcProgram dumping
      exec_opcodes_sys: Allow integer tests to be marked as failure
      testsuite: Increase atomics test timeout to 120s
      orcc: Add compiler error output (if any) to the COMPILE FAILED codegen
      orc: Document what the variable enum means
      orc: Document how the parameter table is sized
      orc: Add a bit of documentation in the instruction structs
      orcinternal: Explain instruction set function prototypes
      x86: Add more documentation
      orccompiler: Explain the meaning of loop_shift in IntelliSense
      test-schro: Also log test passes and failures here
      orcc: Add codegen to binary file mode
      orcc: Identify the target in the binary file output
      orcc: For bin

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,4 +1,4 @@
-option('orc-backend', type : 'combo', choices : ['sse', 'mmx', 'neon', 'mips', 'altivec', 'c64x', 'all'], value : 'all')
+option('orc-backend', type : 'combo', choices : ['avx', 'sse', 'mmx', 'neon', 'mips', 'altivec', 'c64x', 'all'], value : 'all')
 
 # Orc feature options
 option('orc-test', type : 'feature', value : 'auto', description : 'Build the orc-test library used for unit testing and by the orc-bugreport tool')
