orc: Autospec creation for update from version 0.4.36 to version 0.4.37
Aleix Conchillo Flaqué (4):
      orccompiler: add AvailabilityMacros.h header on macOS
      orccompiler: call sys_icache_invalidate() to invalidate macos inst cache
      orccpu-arm: enable neon instructions on Apple ARM64
      orccompiler: fix iOS compilation

Jorge Zapata (1):
      x86insn: Ensure MMX opcodes correctly managing the escape byte

L. E. Segovia (14):
      orctarget: Fix default target selection not applying when retrieving it by name
      x86: Cleanup includes for MSVC C11
      x86: fix GCC >= 13 detecting uninitialized variable usages
      testsuite: Fix build with standards compliant Clang
      sse: Implement convsssql
      Regenerate MMX backend
      sse: Block attempt to use sse4.1 instructions in MMX
      sse: Fix port to MMX by macroing the register quantity and sizing
      mmx: Fix split instructions overwriting the source operands midway
      mmx: Fix mulll using the wrong size for the movs
      orccompiler: Fix register allocator going beyond bounds for scalar registers
      testsuite: Add categorization of testsuites to allow running against MMX and SSE
      testsuite, tools: Fix warning caused by inserting unneeded source operands
      docs: Outline how to add a new target to Orc

Sebastian Dröge (2):
      x86: Include config.h again to fix CPU feature detection on Linux
      orcc: Don't set "sse" as default target

Tim-Philipp Müller (4):
      Back to development after 0.4.36
      ci: add macOS arm64 job
      ci: run orc-bugreport in addition to tests, for extra output
      Release 0.4.37

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = orc
-url = https://gstreamer.freedesktop.org/src/orc/orc-0.4.36.tar.xz
+url = https://gstreamer.freedesktop.org/src/orc/orc-0.4.37.tar.xz
 archives = 
 giturl = https://gitlab.freedesktop.org/gstreamer/orc
 domain = 
@@ -62,7 +62,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for apx
-use_apx = true
+use_apx = false
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
