orc: Autospec creation for update from version 0.4.38 to version 0.4.39
Alexander Slobodeniuk (1):
      once: fix usage of __STDC_NO_ATOMICS__

Jakub Vaněk (1):
      orconce: Fix typo in GCC __sync-based implementation

Jorge Zapata (27):
      Remove redundant file
      Refactor the naming
      Move SSE instructions where they belong
      Move MMX instructions where they belong
      orc_init belongs to orc.h, not prefixed by program
      Move the orc_program_compile* to orcprogram.[ch]
      docs: Update the ROADMAP and TODO files
      Move AVX instructions where they belong
      Add future FIXMEs
      Initial split of the x86 common program code
      Initial migration of AVX target
      For targets with alignment > 16, this is not correct
      Enable the logs back
      Error when the passed in array ptr is not aligned
      Initial migration of MMX target
      Initial migration of SSE target
      Handle the mmx case to clear emms
      Update the roadmap
      Move the target code into its own source file
      Move the cpu related code to a cpu file
      Move the rules out of the opcodes
      Split the opcode code from the sys opcodes
      Update the ROADMAP
      No longer needed
      Move the doc tools into tools
      Move misssing generators and update docs
      Port the AVX instruction reordering to X86

Joshua Root (1):
      Handle undefined TARGET_OS_OSX correctly

L. E. Segovia (17):
      executor: Don't access name directly if ex->program can be NULL
      target: Fix build with MSVC 17.10 + C11
      orccodemem: Implement forwarding mmap() failure when allocating the region
      orccodemem: Ensure that failure to allocate a new code region is idempotent
      orccodemem: Split allocation and chunk initialization of code regions
      orccompiler: Implement checking for JIT support under Linux
      orccodemem: Update the error message when mappings fail
      avx: Fix incomplete naming of compiler options
      orcompiler: suppor

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = orc
-url = https://gstreamer.freedesktop.org/src/orc/orc-0.4.38.tar.xz
+url = https://gstreamer.freedesktop.org/src/orc/orc-0.4.39.tar.xz
 archives = 
 giturl = https://gitlab.freedesktop.org/gstreamer/orc
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = true
 
